test/Fail/Issue6113.err
Issue6113.agda:11.30-32: error: [UnequalTerms]
⊤ !=< X
when checking that the expression tt has type X
